Fixed the output of when rock beats scissors

--- a/rps.html
+++ b/rps.html
@@ -41,7 +41,7 @@
     </div>
     <script src="script.js"></script>
     <footer>
-        <p>Designed by <a href="https://github.com/austin100-v/">Austine Irungu</a></p>
+        <p>Designed by <a href="https://github.com/austin100-v/" target="_blank">Austine Irungu</a></p>
     </footer>
 </body>
 </html>
